# CodeEagle

./: .CodeEagle.conf  .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  go.mod  go.sum  wails.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-dev.yml  release.yml
agents/: code-explorer.md
cmd/codeeagle/: main.go
cmd/dbcheck/: main.go
docs/: cross-platform-packaging.md  face-recognition-v2.md  face-review-app.md  facescan-spec.md  mcp-tools-design.md  non-code-file-support.md
internal/agents/: agent.go  agents_test.go  asker.go  asker_test.go  context.go  context_test.go  designer.go  planner.go  planner_tools.go  planner_tools_test.go  query_tools.go  query_tools_test.go  reviewer.go  smoke_test.go  tool.go  tool_test.go  tools_vector.go
internal/app/: app.go  ask_handlers.go  search_handlers.go  status_handlers.go  types.go
internal/cli/: agent.go  app_cmd.go  app_stub.go  backpop.go  backpop_linker.go  completion.go  config_cmd.go  faces.go  faces_stub.go  hook.go  init.go  init_interactive.go  llm_test_cmd.go  mcp.go  metrics.go  query.go  query_analysis.go  query_analysis_test.go  rag.go  root.go  status.go  store_helper.go  sync.go  update.go  vector_helper.go  vectorindex.go  version.go  watch.go
internal/config/: config.go  (+4 more)
internal/parser/manifest/testdata/: go.mod  package.json  pyproject.toml  requirements.txt
testdata/: Sample.java  sample.go  sample.html  sample.jinja2  sample.js  sample.md  sample.py  sample.sh  sample.tf  sample.tfvars  sample.ts  sample_ansible.yml  sample_gha.yml
(+192 files in other folders)
